Release versão 1.1 beta